# nvoc

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  NVOC_PYTHON_PLAN.md  README.md  SECURITY.md  codex-result.md  delete  pyproject.toml  rustfmt.toml
.github/: RELEASE.md  RELEASE_GUARD.md  RUNNERS.md  SPRINT_ISSUE_TRIAGE.md  actionlint.yaml  dependabot.yml
.github/scripts/: check-versions.py
.github/workflows/: ci.yml  enforce-fmt-lint.yml  gpu-ci.yml  release-management.yml  release-tag-guard.yml  release.yml  rust.yml  supply-chain.yml
NVOC-AutoOptimizer/: LICENSE  README-en.md  README.md
NVOC-AutoOptimizer/src/: basic_func.rs  error.rs  oc_get_set_function_nvml.rs  oc_profile_function.rs
NVOC-AutoOptimizer/test/: deleteStartup.bat  dyn_load_export_windows.bat  linux_oc_recover.sh  test_cuda_windows.bat  test_opencl_linux.sh  test_opencl_windows.bat  windows_recover.bat  windows_start.bat
NVOC-GUI/: .gitignore  README.md  nvoc_gui_config.json  requirements.txt
NVOC-GUI/src/: __init__.py  cli_runner.py
NVOC-SRV/: Cargo.toml  README.md
NVOC-SRV/src/: websrv.rs
NVOC-TUI/nvoc_tui/: __main__.py  cli.py  models.py
Stressor-CUDA/: README.md
Stressor-OpenCL/: README.md  test.py
auto-optimizer/: Cargo.toml  GpuTdrRecovery.reg  README-en.md  README.md  ws.tar.zst
auto-optimizer/src/: arg_help.rs  autoscan_config.rs  basic_func.rs  cleanup.rs  cli_types.rs  error.rs  human.rs  lib.rs  main.rs  manual_override.rs  nvidia_gpu_type.rs  oc_get_set_function_nvapi.rs  oc_get_set_function_nvml.rs  oc_profile_function.rs  oc_scanner.rs  optimize.rs  platform.rs  progressbar.rs  scan_log.rs  scan_strategy.rs  scan_support.rs  stressor_process.rs  types.rs
auto-optimizer/src/oc_scanner/: phases.rs  pressure.rs  runtime.rs
auto-optimizer/systemd/: nvoc-vfp.service
auto-optimizer/test/: cli-stressor-cuda-rs-30+.conf  cli-stressor-cuda-rs-40-50.toml  cli-stressor-cuda-rs-6g-8g.toml  cli-stressor-cuda-rs-dyn-export.conf  cli-stressor-cuda-rs-minload.bat  cli-stressor-cuda-rs-minload.sh  cli-stressor-cuda-rs-minload.toml  cli-stressor-cuda-rs.conf  cli-stressor-cuda-rs.toml  cli-stressor-pascal.toml  concurrent_autoscan.ps1  deleteStartup.bat  dyn_load_export_cuda_rs_linux.sh  dyn_load_export_opencl_linux.sh  dyn_load_export_windows.bat  linux_start.sh  registerStartup.bat  test_cuda_linux.sh  test_cuda_pascal.bat  test_cuda_windows.bat  test_opencl_linux.sh  test_opencl_windows.bat  windows_gpu_event_query.ps1  windows_manual_TDR.bat  windows_oc_pnp_recover.ps1  windows_oc_recover.ps1  windows_recover.bat  windows_start.bat  windows_start_legacy.bat  windows_start_ultrafast.bat
cli/: Cargo.toml  README.md
cli-common/: Cargo.toml
cli-stressor-cuda/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py  test_fixes.py  test_non_gpu_ci.py
cli-stressor-cuda-rs/: Cargo.toml  README.md
cli-stressor-cuda-rs/profiles/: 40-50.toml  low-vram.toml  standard.toml
cli-stressor-cuda-rs/src/: abft.rs  cuda_backend.rs  gemm.rs  golden.rs  lib.rs  logger.rs  main.rs  power.rs  style.rs  vulkan_gfx_stressor.rs
cli-stressor-cuda-rs/src/cuda_backend/: atomic.rs  backend.rs  device.rs  gemm.rs  int_alu.rs  kernels.rs  lanes.rs  mem_ops.rs
cli-stressor-cuda-rs/test/: README.md  multi_gpu_stress.ps1
cli-stressor-cuda-rs/tests/: no_gpu.rs
cli-stressor-cuda/cli_stressor_cuda/: __init__.py  cli.py  config.py  device.py  kernels.py  models.py  parsing.py  runner.py  validation.py
cli-stressor-opencl/: .gitignore  LICENSE  README.md  cli-stressor-opencl.spec  pyproject.toml  requirements.txt  test.py  test_fixes.py  test_non_gpu_ci.py
cli/src/: lib.rs  main.rs  output.rs
core/: Cargo.toml
core/src/: gpu_type.rs  lib.rs  nvapi.rs  nvml.rs  operation.rs  result.rs  target.rs  types.rs
core/tests/: gpu_readonly.rs  gpu_write_conservative.rs  non_gpu.rs
docs/: engineering-audit-2026-07.md  gpuz-nvapi-runtime-windbg.md  gpuz-per-rail-investigation.md  gpuz-power-source-frida.js  nvml-dll-coverage-audit.md  vram-hotspot-mmio-reading.md
docs/wiki/: Architecture.md  Auto-Optimizer.md  Build-and-Test.md  Compatibility-Matrix.md  Components.md  FAQ.md  (+10 more)
gui/: LICENSE  README.md  main.py  nvoc_gui.spec  nvoc_gui_config.json  pyproject.toml  requirements.txt
nvoc-cli-common/: Cargo.toml
nvoc-core/: Cargo.toml
nvoc-core/src/: color.rs  conv.rs  error.rs  gpu.rs  gpu_type.rs  lib.rs  nvapi.rs  nvml.rs  operation.rs  result.rs  types.rs
nvoc-core/tests/: gpu_readonly.rs  gpu_write_conservative.rs  non_gpu.rs
nvoc-python/: Cargo.toml  README.md  pyproject.toml
nvoc-python/python/pynvoc/: __init__.py
nvoc-python/src/: lib.rs
nvoc-python/tests/: test_import.py  test_validation.py
nvoc-webui-backend/: Cargo.toml
nvoc-webui-backend/src/: main.rs
nvoc_tui/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  parsing.py
packaging/: nvoc-tui-aarch64.Dockerfile
scripts/: package-nvoc-tui-aarch64.sh
src/: app.py  arg_help.rs  conv.rs  human.rs  lib.rs  nvidia_gpu_type.rs  oc_get_set_function_nvapi.rs  oc_scanner.rs  platform.rs  websrv.rs
srv/: .gitignore  Cargo.toml  README.md
srv/src/: websrv.rs
test/: dyn_load_export_opencl_linux.sh  windows_TDR.bat  windows_start_legacy.bat  windows_start_ultrafast.bat
tests/: test_config.py  test_parsing.py
tools/: sprint_issue_triage.py  validate_release_management.py
tui/: AGENTS.md  README.md  nvoc_tui.spec  pyproject.toml
tui/nvoc_tui/: __init__.py  __main__.py  app.py  cli.py  config.py  metrics_format.py  models.py  native.py  parsing.py  widgets.py
tui/nvoc_tui/controllers/: __init__.py  autoscan.py  base.py  console.py  dashboard.py  header.py  overclock.py  vfcurve.py
tui/nvoc_tui/panes/: __init__.py  autoscan.py  console.py  dashboard.py  header.py  overclock.py  vfcurve.py
tui/nvoc_tui/styles/: autoscan.tcss  base.tcss  console.tcss  dashboard.tcss  header.tcss  overclock.tcss  vfcurve.tcss
tui/tests/: test_app.py  test_config.py  test_controllers.py  test_metrics_format.py  test_parsing.py
(+33 files in other folders)
