[package]
name = "nvoc-srv"
version = "0.0.1"
description = "NVOC Windows service"
authors = ["Skyworks"]
edition = "2024"

[source.crates-io]
replace-with = 'ustc'
[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[profile.dev]
incremental = false

[dependencies]
windows-service = "0.8.0"
windows-sys = { version = "0.61.2", features = ["Win32"]}
nvml-wrapper = "0.11.0"
nvml-wrapper-sys = "0.9.0"
nvapi-hi = { package = "nvapi-hi", version = "0.2.0", features = ["serde", ], git = "https://github.com/arcnmx/nvapi-rs", branch = "v0.2.x" }
nvoc-auto-optimizer = { path = "../NVOC-AutoOptimizer" }
clap = { version = "2.26.2", default-features = false }
log = "0.4"
log2 = "0.2.2"
chrono = "0.4"  
gag = "1.0.0"
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "time", "macros"] }
tokio-stream = "0.1"
futures-util = "0.3"
compio = "0.15.0"
