[workspace]
members = [
  "nvoc-core",
  "nvoc-cli-common",
  "cli",
  "auto-optimizer",
  "srv",
  "cli-stressor-cuda-rs",
  "nvoc-python",
  "nvoc-webui-backend",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"

[profile.release]
incremental = true
panic = "abort"
opt-level = 2
lto = "thin"
codegen-units = 8

[workspace.dependencies]
nvoc-core = { path = "./nvoc-core" }
nvoc-cli-common = { path = "./nvoc-cli-common" }

anyhow = "*"
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4.6", features = [
  "std",
  "help",
  "usage",
  "error-context",
  "derive"
] }
compio = { version = "0.18.0", features = ["runtime", "time"] }
csv = "1.4.0"
futures-util = "0.3"
flume = "0.12.0"
humantime = "2.3.0"
log = "0.4"
log2 = "0.3.0"
gag = "1.0.0"
colored = "3.1.1"
num-traits = "0.2.19"
nvml-wrapper = "0.12.1"
nvml-wrapper-sys = "0.9.1"
nvapi-hi = { version = "0.2.0", features = [
  "serde",
], git = "https://github.com/Skyworks-Neo/nvapi-rs", branch = "v0.2.x" }
quick-error = "2.0.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-service = "0.8.0"
windows-sys = { version = "0.61.2", features = ["Win32"] }
# For development, we use the local path to the nvapi-rs crate. In production, we can switch to the git dependency.
[patch."https://github.com/Skyworks-Neo/nvapi-rs"]
nvapi = { path = "./nvapi-rs" }
nvapi-sys = { path = "./nvapi-rs/sys" }
nvapi-hi = { path = "./nvapi-rs/hi" }
