[project]
name = "nvoc-tui"
version = "0.1.0"
description = "Terminal UI frontend for NVOC-AutoOptimizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plotext>=5.3.2",
    "textual>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
nvoc-tui = "nvoc_tui.__main__:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["nvoc_tui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
