[package]
name = "nvoc-auto-optimizer"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

description = "NVIDIA GPU curve optimizer"
keywords = ["nvidia", "gtx", "gpu", "nvapi", "overclock"]

readme = "README.md"
license = "Apache-2.0"

include = ["/src/**", "/README*", "/LICENSE*"]

[dependencies]
nvapi-hi = { workspace = true }
nvapi-sys = { workspace = true }
nvapi = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }
clap = { workspace = true }
quick-error = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
time = { workspace = true }
