[package]
name = "nvoc-auto-optimizer"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

description = "NVIDIA GPU curve optimizer"
keywords = ["nvidia", "gtx", "gpu", "nvapi", "overclock"]

readme = "README.md"
license = "Apache-2.0"

include = ["/src/**", "/README*", "/LICENSE*"]

[features]
default = ["stressor-bundled"]
stressor-bundled = [
  "dep:cli-stressor-cuda-rs",
  "cli-stressor-cuda-rs/cuda",
  "cli-stressor-cuda-rs/vulkan",
]
stressor-external = []

[dependencies]
nvoc-core = { workspace = true }
nvoc-cli-common = { workspace = true }
nvml-wrapper = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
colored = { workspace = true }
indicatif = "0.18.4"
once_cell = "1.21.4"
cli-stressor-cuda-rs = { path = "../cli-stressor-cuda-rs", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
# ReadConsoleInputW + WaitForSingleObject for the Alt+P/Alt+F manual-override debug listener.
windows-sys = { workspace = true, features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
