[package]
name = "cli-stressor-cuda-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

description = "Rust CUDA GEMM stressor with validation sidecar"

[features]
default = []
cuda = ["dep:cudarc", "dep:half"]

[dependencies]
clap = { workspace = true }
rand = "0.9"
rand_distr = "0.5.1"
matrixmultiply = "0.3"
thiserror = "1.0"
cudarc = { version = "0.10", optional = true, features = ["f16"] }
half = { version = "2.3.1", optional = true }
