[package]
name = "cli-stressor-cuda-rs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"

description = "Rust CUDA GEMM stressor with validation sidecar"

[features]
default = []
cuda = ["dep:cudarc", "dep:half"]
vulkan = ["ash"]

[dependencies]
nvoc-cli-common = { workspace = true }
clap = { workspace = true }
rand = "0.10"
rand_distr = "0.6"
matrixmultiply = "0.3.10"
rayon = "1.10"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
anstream = "1.0.0"
cudarc = { version = "0.19.7", optional = true, features = ["f16","nvrtc","cuda-12090"] }
half = { version = "2.7.1", optional = true }
ash = { version = "0.38", optional = true }
