[project]
dependencies = [
  "numpy==2.4.4",
  "pyopencl",
  "pyinstaller>=6.0"
]
description = "An OpenCL GPU stress test tool"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
name = "nvoc-cli-stressor"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
version = "0.1.0"
