[package]
name = "nvoc-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

description = "Focused command-line wrapper for nvoc-core"
keywords = ["nvidia", "gpu", "nvapi", "nvml", "overclock"]
license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
nvoc-core = { workspace = true }
nvoc-cli-common = { workspace = true }
nvml-wrapper = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
