[package]
name = "nvoc-core"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

description = "Core NVIDIA GPU control API for NVOC"
keywords = ["nvidia", "gpu", "nvapi", "nvml", "overclock"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
num-traits = { workspace = true }
nvapi = { workspace = true }
nvapi-hi = { workspace = true }
nvml-wrapper = { workspace = true }
quick-error = { workspace = true }
serde_json = { workspace = true }
