[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "pynvoc"
version = "0.2.0a1"
description = "Native Python bindings for nvoc-core"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
    "maturin>=1.9.4",
]

[tool.maturin]
module-name = "pynvoc._native"
python-source = "python"
features = ["extension-module"]
