[package]
name = "nvoc-webui-backend"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

description = "Backend for NVOC WebUI"
keywords = ["nvidia", "gpu", "nvapi", "nvml", "overclock"]
license = "Apache-2.0"

[dependencies]
axum = "0.8.9"
nvoc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
