[package]
name = "nvoc-srv"
version = "0.0.1"
description = "NVOC Windows service"
authors = ["Skyworks"]
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
nvoc-auto-optimizer = { workspace = true }

async-stream = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
compio = { workspace = true }
futures-util = { workspace = true }
flume = { workspace = true }
humantime = { workspace = true }
nvml-wrapper = { workspace = true }
nvml-wrapper-sys = { workspace = true }
nvapi-hi = { workspace = true }
log = { workspace = true }
log2 = { workspace = true }
gag = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
windows-service = { workspace = true }
windows-sys = { workspace = true }
