[project]
name = "nvoc-tui"
version = "0.2.0a1"
description = "Terminal UI frontend for NVOC"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pynvoc",
    "plotext>=5.3.2",
    "textual>=6.1.0",
    "textual-plotext>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.11.0",
    "textual-dev>=1.8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
nvoc-tui = "nvoc_tui.__main__:main"

[tool.uv]
package = true

[tool.uv.sources]
pynvoc = { workspace = true }

[tool.setuptools.packages.find]
include = ["nvoc_tui*"]

[tool.setuptools.package-data]
nvoc_tui = ["styles/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
